--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Responsive Image Gallery</title>
 </head>
 <body>
-    
+    <h1>Responsive Image Gallery</h1>
+
+    <div class="gallery">
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639393455114-84df73f758cd?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="venus">
+            <p>Venus - planet 02</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639653279211-09958a51fb00?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Earth - planet 03</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639477735279-c36dda1f7ebb?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Mars - planet 04</p>
+        </div>
+
+        <div class="gallery_item"></div>
+            <img src="https://images.unsplash.com/photo-1639477734993-44982980229e?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Jupiter - planet 05</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639548206755-b20081a7cadc?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Saturn - planet 06</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639548206689-1a5238f8d5bb?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Uranus - planet 07</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639477878754-4119b60fb02a?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <p>Neptune - planet 08</p>
+        </div>
+
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639393455114-84df73f758cd?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="venus">
+            <p>Copy</p>
+        </div>
+
+    </div>
 </body>
 </html>
