--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </div>
 
         <div class="gallery_item">
-            <img src="https://images.unsplash.com/photo-1639653279211-09958a51fb00?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <img src="https://images.unsplash.com/photo-1639653279211-09958a51fb00?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="earth">
             <p>Earth - planet 03</p>
         </div>
 
         <div class="gallery_item">
-            <img src="https://images.unsplash.com/photo-1639477735279-c36dda1f7ebb?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <img src="https://images.unsplash.com/photo-1639477735279-c36dda1f7ebb?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="mars">
             <p>Mars - planet 04</p>
         </div>
 
-        <div class="gallery_item"></div>
-            <img src="https://images.unsplash.com/photo-1639477734993-44982980229e?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <div class="gallery_item">
+            <img src="https://images.unsplash.com/photo-1639477734993-44982980229e?q=80&w=2960&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="jupitor">
             <p>Jupiter - planet 05</p>
         </div>
 
